feat: Implement V2 features - Categories, Budgets, Spending Analysis, and Rules
- Add category system with full CRUD operations
- Implement budget management with hard/soft limits and alerts
- Add spending analysis with weekly/monthly views and category filtering
- Create allocation rules system for automated financial planning
- Enhance Dashboard with comprehensive spending overview and category management
- Combine Budgets and Rules into single tab for better UX
- Integrate spending analysis directly into Dashboard
- Add spending alerts and budget tracking
- Update transaction system to support categories

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "concurrently \"npm run dev:electron\" \"npm run dev:react\"",
     "dev:electron": "tsc -p tsconfig.main.json && electron .",
     "dev:react": "vite",
-    "build": "npm run build:main && npm run build:react && cross-env CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --dir || echo Build completed (signing errors can be ignored)",
+    "build": "npm run build:main && npm run build:react && cross-env CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --dir || echo 'Build completed (signing errors can be ignored)'",
     "build:main": "tsc -p tsconfig.main.json",
     "build:react": "vite build",
     "dist": "npm run build"
