feat: Add LLM-Enhanced Forecasting with OpenAI API
- Integrate OpenAI API for intelligent financial forecasting
- Add LLM service with GPT-3.5-turbo support (cost-efficient)
- Create Settings component for API key management
- Implement LLM-powered insights:
  * Key insights from financial data
  * Personalized recommendations
  * Risk identification
  * Opportunity detection
- Add LLM scenario analysis for what-if scenarios
- Settings stored locally in userData directory
- Graceful fallback to rule-based forecasting if API unavailable
- Support for GPT-3.5-turbo, GPT-4, and GPT-4-turbo models
- Cost-efficient design (~$0.001-0.002 per forecast)
- Privacy-focused: only financial summaries sent to API

--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.303.0",
+    "openai": "^6.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.10.3"
